prepared for git

--- a/2.html
+++ b/2.html
@@ -195,7 +195,7 @@
     <div class="chat-container" id="chat-container">
     </div>
     <div id="choice">
-        <a href="1.html">
+        <a href="index.html">
             <pre class="button">Вернуться на главную</pre>
         </a>
     </div>
