--- a/3.html
+++ b/3.html
@@ -186,7 +186,7 @@
     <div class="spinner"></div>
 </div>
 <div id="main-content">
-    <button id="home-button" onclick="window.location.href='1.html'">На главную</button>
+    <button id="home-button" onclick="window.location.href='index.html'">На главную</button>
     <h1>Доступные мультфильмы</h1>
     <a href="4.html">
         <div id="1" class="image">
