--- a/2.html
+++ b/2.html
@@ -185,7 +185,7 @@
             }
         }
     </style>
-    <title>About</title>
+    <title>О сайте</title>
 </head>
 <body>
 <div class="loader-container">
