--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             }
         }
     </style>
-    <title>Welcome Page</title>
+    <title>Добро пожаловать</title>
 </head>
 <body>
 <div class="loader-container">
