--- a/3.html
+++ b/3.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="лого%20сайта.png">
 
-    <title>Select cartoons</title>
+    <title>Мультфильмы</title>
     <style>
         :root {
             --main-color: #0F0F0F;
